# Linux-C-

./: CMakeLists.txt
docs/: readme.txt
include/: client.h  common.h  server.h
lib/: readme.txt
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  server.cpp
